manifests/workloads/luzifer-ots/ots/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ots-danmanners-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ots.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/instance: ots
spec:
  type: ExternalName
  externalName: kube.danmanners.com
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: ots
  labels:
    run: ots
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 3000
    protocol: TCP
  selector:
    run: ots
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ots-danmanners-cert-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ots.danmanners.com`)
      kind: Rule
      services:
        - name: ots
          port: 3000
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ots-danmanners-cert-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ots.danmanners.com`)
      kind: Rule
      services:
        - name: ots
          port: 3000
  tls:
    secretName: ots-danmanners-cert
